@@ -2,6 +2,7 @@
  - Fix workaround code for older libpq versions without PQunescapeBytea()
  - Work around endless loop in grep in Fedora Core 4
  - In Visual C++, assume libpqxx is a DLL when linking to std library as DLL
+ - Missing documentation in distribution archive is back again
 2.5.3
  - Greatly improved builds on MinGW with MSYS
  - All known problems with MinGW fixed
